--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "mintview",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app/background.js",
   "scripts": {
-    "dev": "ts-node-dev --project tsconfig.server.json --ignore-watch [\".next\",\"node_modules\"] ./api/index.ts",
-    "build": "node build.js",
-    "nextBuild": "next build",
+    "dev:web": "ts-node-dev --project tsconfig.server.json --ignore-watch [\".next\",\"node_modules\"] ./api/index.ts",
+    "dev:electron": "nextron",
+    "build:web": "next build",
+    "build:electron": "nextron build --all",
+    "build:electron:win": "nextron build --win",
+    "build:electron:linux": "nextron build --linux",
     "start": "ts-node --project tsconfig.server.json ./api/index.ts"
   },
   "repository": {
@@ -15,10 +18,10 @@
   },
   "keywords": [
     "React",
-    "AI",
-    "Cards"
+    "Mint",
+    "Coins"
   ],
-  "author": "Alexandre Lavoie",
+  "author": "Alexandre Lavoie <alexandre.lavoie00@gmail.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/alexandre-lavoie/mintview/issues"
@@ -28,6 +31,7 @@
     "@material-ui/core": "^4.9.7",
     "@material-ui/icons": "^4.9.1",
     "cors": "^2.8.5",
+    "electron-serve": "^1.0.0",
     "express": "^4.17.1",
     "fabric": "^4.0.0-rc.1",
     "framer-motion": "^1.10.2",
@@ -48,7 +52,10 @@
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.5",
     "@types/react-router-dom": "^5.1.3",
+    "electron": "^9.1.0",
+    "electron-builder": "^22.7.0",
     "ignore-loader": "^0.1.2",
+    "nextron": "^5.15.0",
     "ts-node": "^8.10.2",
     "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.8.3"
