--- a/package.json
+++ b/package.json
@@ -35,11 +35,14 @@
     "express": "^4.17.1",
     "fabric": "^4.0.0-rc.1",
     "framer-motion": "^1.10.2",
+    "i18next": "^19.6.2",
     "isomorphic-unfetch": "^3.0.0",
     "jsdom": "^16.3.0",
     "next": "9.3.6",
     "react": "16.13.1",
+    "react-color": "^2.18.1",
     "react-dom": "16.13.1",
+    "react-i18next": "^11.7.0",
     "reflect-metadata": "^0.1.13",
     "vectors": "^0.1.0",
     "webpack": "^4.43.0"
@@ -50,6 +53,7 @@
     "@types/fabric": "^3.6.7",
     "@types/node": "^13.13.4",
     "@types/react": "^16.9.34",
+    "@types/react-color": "^3.0.4",
     "@types/react-dom": "^16.9.5",
     "@types/react-router-dom": "^5.1.3",
     "electron": "^9.1.0",
