--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,7 @@
     },
     "exclude": [
         "node_modules",
-        "api/*"
+        "express_api/*"
     ],
     "include": [
         "next-env.d.ts",
